2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/SongDatabase.cs:

	Add Album.RemoveArtistsAndPerformers.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Support setting both a removed album as well as an added album
	in the signal request. Needed for changed songs.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Restore SignalRequest constructor.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* PluginLib/Plugin.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* doc/en/Muine.PluginLib/TickEventHandler.xml:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:

	Add a TickEvent to IPlayer, and make SkipToWindow use it.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Pause instead of stop at last eos. This is for seeking.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Player.cs:
	* src/PlaylistWindow.cs:

	Emit a Tick signal when a song's duration has changed at eos.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindowList.cs:
	* src/PlaylistWindow.cs:

	Support GDK_ACTION_LINK and _ASK.

2005-01-14  Mark McLauchlan  <mrm21@sussex.ac.uk>

	* DBusLib/Player.cs:

	WriteAlbumCoverToFile PlayingSong null check.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Restore more DB logic ..

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/AddWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* src/Actions.cs:
	* src/PlaylistWindow.cs:

	Make Actions work properly, ie not lock up the app all the time.
	
	* src/About.cs:

	The About subclass didn't work, revert to previous
	ShowWindow stuff- see Ximian Bugzilla #71271

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Fix OnChanged logic.
	
	* src/AddWindow.cs:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	SingalRequest, BooleanBox and DragDropPosition have to be classes,